# audio-translate-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  batch_dub.py  batch_translate.py  batch_translate_ko.py  cgma_translate.py  cgma_translate_ko.py  gen_en_srt.py  merge_av_bulk.py  pyproject.toml  translate_ru_ko.py
src/app/: cli.py  config.py  dubber.py  elevenlabs_client.py  errors.py  main.py  merge_av.py  models.py  sync_dubber.py  translator.py  utils.py  writers.py
tests/: test_cli.py  test_elevenlabs_client.py  test_utils.py  test_writers.py
